# project-template

./: .gitignore  .ignore  .ruff.toml  README.md  pixi.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: roadblock.md
.github/workflows/: ruff.yaml
analysis/: README.md
data/: README.md
figures/: README.md
lab/: __init__.py
notebook/: README.md
reports/: README.md
scratch/: README.md
