[project]
name = "lab"
authors = [
    # TODO: Add to group members before Alex
    {name = "Alex Maldonado", email = "alex.maldonado@pitt.edu"}
]
maintainers = [
    {name = "Alex Maldonado", email = "alex.maldonado@pitt.edu"}
]
dynamic = ["version"]
readme = "README.md"

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lab*"]

[tool.setuptools_scm]
version_file = "lab/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"
